--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                             <li><span>Address:</span></li>
                             <li><span>Phone:</span></li>
                             <li><span>Job:</span>Engineer | Data Analyst | Web Dev | Graphic Designer</li>
-                            <li><span>E-mail:</span> tradingviewnidon2@gmail.com</li>
+                            <li><span>E-mail:</span> donardazura@gmail.com</li>
                             <!-- <li><span>Skype:</span> chrisjohnson85</li> -->
                             <li>
                                 <div class="social-icons top_15"> 
